Started and finished hero section

--- a/style.css
+++ b/style.css
@@ -3,3 +3,184 @@
 
 /* font-family: 'Overpass', sans-serif; */
 /* font-family: 'Ubuntu', sans-serif; */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+.testing{
+  width: 100%;
+  height: 500px;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto;
+}
+
+html, body{
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+}
+
+section{
+  width: 1440px;
+  background-color: #ffffff;
+  margin: auto;
+}
+
+.hero{
+  position: relative;
+  width: 100%;
+  height: 600px;
+  background-image: linear-gradient(to right, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
+  border-bottom-left-radius: 90px;
+  z-index: 200;
+}
+
+.hero-background{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+   background-image: url(images/bg-pattern-intro-desktop.svg);
+  background-size: 200%;
+  background-repeat: no-repeat;
+  background-position-x: 20%;
+  background-position-y: 50%;
+  z-index: -1;
+}
+
+header{
+  padding: 0 165px;
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Ubuntu', sans-serif;
+  align-items: center;
+  margin-bottom: 135px;
+}
+
+.left-header-container{
+  display: flex;
+  gap: 60px;
+  align-items: center;
+}
+
+.navigation-list{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.navigation-list div{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #ffffff;
+}
+
+.navigation-list div i{
+  font-size: 10px;
+}
+
+.right-header-container{
+  display: flex;
+  gap: 35px;
+}
+
+
+.right-header-container button{
+  background-color: #ffffff;
+  padding: 15px 41px;
+  color: hsl(356, 100%, 66%);
+  font-weight: 600;
+  font-family: 'Ubuntu', sans-serif;
+  border: none;
+  border-radius: 20px;
+  font-size: 15px;
+}
+
+#login{
+  background-color: transparent;
+  color: #ffffff;
+  padding: 0;
+}
+
+.hero-writeup{
+  text-align: center;
+  font-family: 'Overpass', sans-serif;
+  color: #ffffff;
+}
+
+.hero-writeup h1{
+  font-size: 62px;
+  font-weight: 300;
+  margin-bottom: 25px;
+}
+
+.hero-writeup p{
+font-weight: 300;
+font-size: 18px;
+letter-spacing: 1px;
+margin-bottom: 50px;
+}
+
+.hero-buttons{
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.hero-buttons button{
+  background-color: #ffffff;
+  padding: 16px 19px;
+  color: hsl(356, 100%, 66%);
+  font-weight: 600;
+  font-family: 'Ubuntu', sans-serif;
+  border: none;
+  border-radius: 25px;
+  font-size: 15px;
+}
+
+#learn-more{
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+}
+
+
+
+.one{
+background-color: hsl(356, 100%, 66%);
+}
+
+.two{
+background-color: hsl(355, 100%, 74%);
+}
+
+.three{
+background-color: hsl(208, 49%, 24%);
+}
+
+.four{
+background-color: hsl(240, 2%, 79%);
+}
+
+.five{
+background-color: hsl(207, 13%, 34%);
+}
+
+.six{
+background-color: hsl(240, 10%, 16%);
+}
+
+.seven{
+background-image: linear-gradient(to right, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
+}
+
+.eight{
+background-image: linear-gradient(to right, hsl(237, 17%, 21%), hsl(237, 23%, 32%)
+);
+}
+
